<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 Google Inc. All rights reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name">Stretto</string>

    <string name="skip_back_10s">Skip back 10s</string>
    <string name="skip_forward_10s">Skip forward 10s</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>

    <string name="menu_music_queue">Queue</string>
    <string name="album_art_alt">Album art</string>
    <string name="duration_unknown">--:--</string>
    <string name="duration_format">%d:%02d</string>

    <string name="cast_context_error">Failed to get Cast context. Try updating Google Play Services and restart the app.</string>

    <string name="search_hint">Search songs, artists\u2026</string>
    <string name="search_no_results">No results found</string>
    <string name="search_title">Search</string>

    <!-- Mini-player and now-playing accessibility -->
    <string name="mini_player">Mini player</string>
    <string name="play_pause">Play or pause</string>
    <string name="skip_next">Skip to next</string>
    <string name="skip_previous">Skip to previous</string>
</resources>
