<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019 Google Inc. All rights reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nowPlayingBackground">

    <!-- Album Art -->
    <ImageView
        android:id="@+id/albumArt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"
        android:contentDescription="@string/album_art_alt"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_album_black_24dp" />

    <!-- Title -->
    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/now_playing_text_padding"
        android:layout_marginTop="@dimen/now_playing_title_top_margin"
        android:layout_marginEnd="@dimen/now_playing_text_padding"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:textSize="@dimen/now_playing_title_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/albumArt"
        tools:text="Song Title" />

    <!-- Artist / Subtitle -->
    <TextView
        android:id="@+id/subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/now_playing_text_padding"
        android:layout_marginTop="@dimen/now_playing_title_bottom_margin"
        android:layout_marginEnd="@dimen/now_playing_text_padding"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:textSize="@dimen/now_playing_artist_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:text="Artist Name" />

    <!-- Current Position -->
    <TextView
        android:id="@+id/position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/now_playing_seekbar_margin"
        android:layout_marginTop="@dimen/now_playing_artist_bottom_margin"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitle"
        tools:text="0:00" />

    <!-- SeekBar -->
    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:max="1000"
        app:layout_constraintBottom_toBottomOf="@id/position"
        app:layout_constraintEnd_toStartOf="@id/duration"
        app:layout_constraintStart_toEndOf="@id/position"
        app:layout_constraintTop_toTopOf="@id/position" />

    <!-- Duration -->
    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/now_playing_seekbar_margin"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/position"
        tools:text="0:00" />

    <!-- Skip Previous -->
    <ImageButton
        android:id="@+id/skipPrevious"
        android:layout_width="@dimen/now_playing_skip_button_size"
        android:layout_height="@dimen/now_playing_skip_button_size"
        android:layout_marginEnd="@dimen/now_playing_skip_margin"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/skip_previous"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@id/media_button"
        app:layout_constraintEnd_toStartOf="@id/media_button"
        app:layout_constraintTop_toTopOf="@id/media_button"
        app:srcCompat="@drawable/ic_skip_previous_black_24dp" />

    <!-- Play / Pause -->
    <ImageButton
        android:id="@+id/media_button"
        android:layout_width="@dimen/now_playing_play_pause_button_size"
        android:layout_height="@dimen/now_playing_play_pause_button_size"
        android:layout_marginTop="@dimen/now_playing_play_pause_top_margin"
        android:layout_marginBottom="@dimen/now_playing_play_pause_bottom_margin"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/play_pause"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seekBar"
        app:srcCompat="@drawable/ic_play_arrow_black_24dp" />

    <!-- Skip Next -->
    <ImageButton
        android:id="@+id/skipNext"
        android:layout_width="@dimen/now_playing_skip_button_size"
        android:layout_height="@dimen/now_playing_skip_button_size"
        android:layout_marginStart="@dimen/now_playing_skip_margin"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/skip_next"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@id/media_button"
        app:layout_constraintStart_toEndOf="@id/media_button"
        app:layout_constraintTop_toTopOf="@id/media_button"
        app:srcCompat="@drawable/ic_skip_next_black_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
